--- a/app/views/datatools/datatool_sim.html
+++ b/app/views/datatools/datatool_sim.html
@@ -11,7 +11,7 @@
                 <div  style="width:100%;">
                             <div class="ys-mainpanel-inner">
                                 <!--svg here-->
-                                <svg version="1.1" id="ys-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="1180px" viewBox="0 0 600 1180" preserveAspectRetio="xMidYMin meet">
+                                <svg version="1.1" id="ys-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="980px" viewBox="0 0 600 1180" preserveAspectRetio="xMidYMin meet">
 
                                 </svg>
                                 <!--svg here-->
@@ -57,10 +57,14 @@
                                                         <em>业态</em><span class="ys-icon ys-icon-dropdown"></span>
                                                     </button>
                                                     <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">业态A</a></li>
-                                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">业态B</a></li>
-                                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">业态C</a></li>
-                                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">业态D</a></li>
+                                                        <li role="presentation"><a role="menuitem" tabindex="-1" >超市</a></li>
+                                                        <li role="presentation"><a role="menuitem" tabindex="-1" >影院</a></li>
+                                                        <li role="presentation"><a role="menuitem" tabindex="-1" >时装</a></li>
+                                                        <li role="presentation"><a role="menuitem" tabindex="-1" >餐饮</a></li>
+                                                        <li role="presentation"><a role="menuitem" tabindex="-1" >娱乐</a></li>
+                                                        <li role="presentation"><a role="menuitem" tabindex="-1" >配套</a></li>
+                                                        <li role="presentation"><a role="menuitem" tabindex="-1" >儿童</a></li>
+                                                        <li role="presentation"><a role="menuitem" tabindex="-1" >其他</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -161,9 +165,9 @@
                             <div class="table-wrapper">
                                 <table class="table table-no-bordered amp-table">
                                     <colgroup>
-                                        <col width="160px" />
+                                        <col width="130px" />
                                         <col />
-                                        <col width="160px" />
+                                        <col width="130px" />
                                         <col />
                                     </colgroup>
                                     <tbody>
@@ -259,10 +263,10 @@
                                                         <em>租金方式</em><span class="ys-icon ys-icon-dropdown"></span>
                                                     </button>
                                                     <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">租金方式A</a></li>
-                                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">租金方式B</a></li>
-                                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">租金方式C</a></li>
-                                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">租金方式D</a></li>
+                                                        <li role="presentation"><a role="menuitem" tabindex="-1" >自持</a></li>
+                                                        <li role="presentation"><a role="menuitem" tabindex="-1" >销售</a></li>
+                                                        <li role="presentation"><a role="menuitem" tabindex="-1" >销售返租</a></li>
+
                                                     </ul>
                                                 </div>
                                             </div>
@@ -281,7 +285,7 @@
                                                     </button>
                                                     <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
                                                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#">月付</a></li>
-                                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">年付</a></li>
+                                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">季付</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -300,17 +304,23 @@
                                     <span><em class="color-label" style="background-color:#1abd9d;"></em><i class="name">租金包</i></span>
                                 </div>
                             </div>
+                            <div class="block bottom-block bottom-block-fixed clearfix">
+                                <div class="btn-wrapper pull-right">
+                                    <a href="javascript:void(0)" class="btn btn-default amp-btn" id="btn-go">查看回报</a>
+                                    <a href="javascript:void(0)" class="btn btn-default amp-btn amp-btn-reverse" id="btn-dismiss">解约</a>
+                                </div>
+                            </div>
                     <!--<div class="swiper-scrollbar"></div>-->
                 </div><!--swiper container-->
             </div>
         </div>
     </div><!--ys-block-->
-    <div class="block bottom-block bottom-block-fixed clearfix">
+    <!--<div class="block bottom-block bottom-block-fixed clearfix">
         <div class="btn-wrapper pull-right">
             <a href="javascript:void(0)" class="btn btn-default amp-btn" id="btn-go">查看回报</a>
             <a href="javascript:void(0)" class="btn btn-default amp-btn amp-btn-reverse" id="btn-dismiss">解约</a>
         </div>
-    </div>
+    </div>-->
 </div><!-- contentpanel -->
 <script src="../static/js/views/datatools/datasim.js"></script>
 <script src="../static/js/views/datatools/inputs.js"></script>
