--- a/app/static/css/main/amp_main.css
+++ b/app/static/css/main/amp_main.css
@@ -92,7 +92,7 @@ a.system-item:hover .ys-icon-systoggle{background-position: -74px -254px;}
 
 /***** MAIN PANEL *****/
 
-.mainpanel { margin-left:0; position: relative;width:100%;height:100%;padding-top:44px;padding-bottom:20px;min-height: 100vh;background: #fff; /*min-height: 1000px; */}
+.mainpanel { margin-left:0; position: relative;width:100%;height:100%;padding-top:44px;padding-bottom:0;min-height: 100vh;background: #fff; /*min-height: 1000px; */}
 .pageheader { display:none;position: relative;padding: 0;height:44px;line-height: 44px; border-bottom: 0; border-top: 0; background: #f3f4f8;overflow-y: hidden;  }
 .pageheader.active{/*display: block;*/display: none;}
 .pageheader h2 { font-size: 28px; color: #1D2939; letter-spacing: -0.5px; margin: 0; }
