--- a/app/views/datatools/datatool_rent_package_rpanel.html
+++ b/app/views/datatools/datatool_rent_package_rpanel.html
@@ -170,3 +170,13 @@
         </div>
     </div>
 </div>
+<script src="../static/js/views/datatools/rpgindex_rpanel.js"></script>
+<script>
+    $(document).ready(function(){
+        //这里有公共方法，确定业务后 单独放到一个文件
+
+        rpg_rpanel.dropdownSelector();
+        rpg_rpanel.init();
+    });
+
+</script>
