--- a/app/static/css/views/datatools.css
+++ b/app/static/css/views/datatools.css
@@ -93,8 +93,10 @@
 */
 
 #irr-plan  .ys-table-static .table tr.tr-main>th{padding-left:25px;color:#373c42;font-size:14px;font-weight:bold;}
-#irr-plan  .ys-table-static .table tr.tr-main>td{font-size: 14px;color:#373c42;font-size:14px;font-weight:bold;}
-#irr-plan  .ys-table-static .table tr.tr-note>th,#irr-plan  .ys-table-static .table tr.tr-note>td{font-size: 14px;color:#8592a3;}
+#irr-plan  .ys-table-static .table tr.tr-main>td,#irr-plan .amp-table tr.tr-main>td{font-size: 14px;color:#373c42;font-size:14px;font-weight:bold;}
+#irr-plan .amp-table tr.tr-note>tr,#irr-plan .amp-table tr.tr-note>td,
+#irr-plan  .ys-table-static .table tr.tr-note>th,#irr-plan  .ys-table-static .table tr.tr-note>td{font-size: 14px;color:#8592a3;font-weight:bold;}
+
 
 #irr-plan .table>tbody>tr>th, #irr-plan .table>tbody>tr>td{padding:3px 10px;padding-left:25px;
     height:38px;line-height:28px;overflow:hidden;}/*这里修改改变整体表格单元高度*/
