--- a/app/components/toolbar/rent_package_filter.html
+++ b/app/components/toolbar/rent_package_filter.html
@@ -26,10 +26,13 @@
                 <em>请选择</em><span class="ys-icon ys-icon-dropdown"></span>
             </button>
             <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">楼层1</a></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">楼层2</a></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">楼层3</a></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">楼层4</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">B1</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">F1</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">F2</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">F3</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">F4</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">F5</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">F6</a></li>
             </ul>
         </div>
     </div><!--div toolbar-item-->
@@ -42,9 +45,14 @@
                 <em>请选择</em><span class="ys-icon ys-icon-dropdown"></span>
             </button>
             <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">餐饮</a></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">服装</a></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">儿童</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" >超市</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" >影院</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" >时装</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" >餐饮</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" >娱乐</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" >配套</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" >儿童</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" >其他</a></li>
             </ul>
         </div>
     </div><!--div toolbar-item-->
@@ -58,8 +66,9 @@
             </button>
             <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
                 <li role="presentation"><a role="menuitem" tabindex="-1" href="#">自持</a></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">销售返租</a></li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" href="#">销售</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">销售返租</a></li>
+
             </ul>
         </div>
     </div><!--div toolbar-item-->
