--- a/app/views/datatools/datatool_rent_package_rpanel.html
+++ b/app/views/datatools/datatool_rent_package_rpanel.html
@@ -92,7 +92,7 @@
                     </td>
 
                     <td>
-                        <div class="input-wrapper">
+                        <div class="input-wrapper input-wrapper-select">
                             <label>业态</label>
                             <input type="text" value="" hidden/>
                             <div class="dropdown">
