--- a/app/views/datatools/datatool_rent_package.html
+++ b/app/views/datatools/datatool_rent_package.html
@@ -12,13 +12,13 @@
             <div class="ys-table-fixed-top" >
                 <table class="table table-no-bordered amp-table table-header-fixed">
                     <colgroup>
+                        <col width="15%">
+                        <col width="15%">
+                        <col width="15%">
                         <col width="14%">
                         <col width="14%">
                         <col width="14%">
-                        <col width="14%">
-                        <col width="14%">
-                        <col width="14%">
-                        <col width="16%">
+                        <col width="13%">
                     </colgroup>
                     <thead>
                         <tr>
@@ -28,7 +28,7 @@
                             <th>套内面积（m&sup2）</th>
                             <th>业态</th>
                             <th>产权性质</th>
-                            <th>租金标准</th>
+                            <th class="text-right" style="text-align: right;">租金标准</th>
                         </tr>
                     </thead>
                 </table>
@@ -36,13 +36,13 @@
             <div class="ys-table-main">
                 <table class="table amp-table table-hover table-header-fixed">
                     <colgroup>
+                        <col width="15%">
+                        <col width="15%">
+                        <col width="15%">
                         <col width="14%">
                         <col width="14%">
                         <col width="14%">
-                        <col width="14%">
-                        <col width="14%">
-                        <col width="14%">
-                        <col width="16%">
+                        <col width="13%">
                     </colgroup>
                     <tbody>
                     <tr>
@@ -52,7 +52,7 @@
                         <td>126.4</td>
                         <td>服装</td>
                         <td>销售</td>
-                        <td><i>263</i>元/m&sup2/月</td>
+                        <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr>
                     <tr>
                         <td>B1-10</td>
@@ -61,7 +61,7 @@
                         <td>42</td>
                         <td></td>
                         <td>销售</td>
-                        <td><i>263</i>元/m&sup2/月</td>
+                        <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr>
 					<tr>
                         <td>B1-101</td>
@@ -70,7 +70,7 @@
                         <td>43.7</td>
                         <td>服装</td>
                         <td>销售</td>
-                        <td><i>263</i>元/m&sup2/月</td>
+                        <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr>
                     <tr>
                         <td>B1-103</td>
@@ -79,7 +79,7 @@
                         <td>33.7</td>
                         <td>服装</td>
                         <td>销售</td>
-                        <td><i>263</i>元/m&sup2/月</td>
+                        <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr>
                     <tr>
                         <td>B1-105</td>
@@ -88,7 +88,7 @@
                         <td>34.8</td>
                         <td>服装</td>
                         <td>销售</td>
-                        <td><i>263</i>元/m&sup2/月</td>
+                        <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr>
                     <tr>
                         <td>B1-107</td>
@@ -97,7 +97,7 @@
                         <td>51.8</td>
                         <td>服装</td>
                         <td>销售</td>
-                        <td><i>263</i>元/m&sup2/月</td>
+                        <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr>
                     <tr>
                         <td>B1-109</td>
@@ -106,7 +106,7 @@
                         <td>52.2</td>
                         <td>服装</td>
                         <td>销售</td>
-                        <td><i>263</i>元/m&sup2/月</td>
+                        <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr>
                     <tr>
                         <td>B1-11/13-R</td>
@@ -115,7 +115,7 @@
                         <td>134.1</td>
                         <td></td>
                         <td>销售</td>
-                        <td><i>263</i>元/m&sup2/月</td>
+                        <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr>
                     <tr>
                         <td>B1-12</td>
@@ -124,7 +124,7 @@
                         <td>43</td>
                         <td></td>
                         <td>销售</td>
-                        <td><i>263</i>元/m&sup2/月</td>
+                        <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr>                    
                      <tr>
                         <td>B1-14</td>
@@ -133,7 +133,7 @@
                         <td>39</td>
                         <td></td>
                         <td>销售</td>
-                        <td><i>263</i>元/m&sup2/月</td>
+                        <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr> 
                     <tr>
                         <td>B1-15/17</td>
@@ -142,7 +142,7 @@
                         <td>129.3</td>
                         <td></td>
                         <td>销售</td>
-                        <td><i>263</i>元/m&sup2/月</td>
+                        <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr>                     
                     <tr>
                         <td>B1-16</td>
@@ -151,7 +151,7 @@
                         <td>56</td>
                         <td></td>
                         <td>销售</td>
-                        <td><i>263</i>元/m&sup2/月</td>
+                        <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr>                     
                         <tr>
                         <td>B1-164</td>
@@ -160,7 +160,7 @@
                         <td>26.6</td>
                         <td>服装</td>
                         <td>销售</td>
-                        <td><i>263</i>元/m&sup2/月</td>
+                        <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr>                 
                         <tr>
                         <td>B1-165</td>
@@ -169,7 +169,7 @@
                         <td>26.6</td>
                         <td>服装</td>
                         <td>销售</td>
-                        <td><i>263</i>元/m&sup2/月</td>
+                        <td class="text-right"><i>263</i>元/m&sup2/月</td>
                     </tr>                 
                     
                     </tbody>
